...
            .onChange(of: sortOrder) { _, _ in
                analytics.log(.userAction(action: .sort))
            }
        } label: {
            Label(.sort, systemImage: "arrow.up.arrow.down")
        }
        .accessibilityIdentifier("sortNavButton")
    }

    var addItemButton: some View {
        Button {
            analytics.log(.userAction(action: .create))
            sheetItem = .addItem
        } label: {
            Label(.addItem, systemImage: "plus")
        }
...
