...
            ToolbarItem(placement: .topBarTrailing) {
                Button("Save") {
                    save()
                    closeAction()
                }
                .disabled(!canSave)
                .accessibilityIdentifier("saveItemNavButton")
            }
        }
    }

    private var titleSection: some View {
        EditSectionView(
...
